# tripcast

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile  requirements.txt
airflow/dags/: _common.py  fuel_price_update.py  region_update.py  rest_stop_update.py  travel_notify.py  weather_update.py
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_region_boundaries.py
backend/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  trips.py  users.py
backend/app/services/: data_go_kr.py  region.py  report.py  telegram.py
db/: init.sql
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  auth.tsx  index.css
frontend/src/pages/: Login.tsx  Profile.tsx  Register.tsx  TripEditor.tsx  Trips.tsx
tests/: test_date_utils.py
tripcast/: __init__.py  date_utils.py
